Fix collapsing links div

--- a/styles/scss/layout/_portfolio.scss
+++ b/styles/scss/layout/_portfolio.scss
@@ -83,11 +83,11 @@
             padding: 15%;
         }
     }
-    .liveLink, 
-    .githubLink {
-        margin: 0 22.5%;
+    .liveLink {
+        margin-right: 1rem
         
     }
+
     .links {
         display: flex;
         justify-content: space-around;
